--- a/dicomtreeQT5.ui
+++ b/dicomtreeQT5.ui
@@ -64,13 +64,20 @@
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
-     <string>Fi&amp;le</string>
+     <string>&amp;File</string>
     </property>
     <addaction name="action_Open"/>
     <addaction name="separator"/>
     <addaction name="action_Exit"/>
    </widget>
+   <widget class="QMenu" name="menuHelp">
+    <property name="title">
+     <string>&amp;Help</string>
+    </property>
+    <addaction name="action_About"/>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QToolBar" name="toolBar">
@@ -88,8 +95,8 @@
   </widget>
   <action name="action_Open">
    <property name="icon">
-    <iconset>
-     <normaloff>Icons/open.xpm</normaloff>Icons/open.xpm</iconset>
+    <iconset resource="dicomtreeQT5.qrc">
+     <normaloff>:/icons/Icons/ImageOpen.xpm</normaloff>:/icons/Icons/ImageOpen.xpm</iconset>
    </property>
    <property name="text">
     <string>&amp;Open</string>
@@ -100,8 +107,8 @@
   </action>
   <action name="action_Exit">
    <property name="icon">
-    <iconset>
-     <normaloff>Icons/exit.xpm</normaloff>Icons/exit.xpm</iconset>
+    <iconset resource="dicomtreeQT5.qrc">
+     <normaloff>:/icons/Icons/exit.xpm</normaloff>:/icons/Icons/exit.xpm</iconset>
    </property>
    <property name="text">
     <string>E&amp;xit</string>
@@ -110,8 +117,15 @@
     <string>Exit program</string>
    </property>
   </action>
+  <action name="action_About">
+   <property name="text">
+    <string>&amp;About</string>
+   </property>
+  </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="dicomtreeQT5.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>action_Exit</sender>
