--- a/dicomtreeQT5.ui
+++ b/dicomtreeQT5.ui
@@ -70,13 +70,13 @@
         <property name="frameShadow">
          <enum>QFrame::Raised</enum>
         </property>
-        <widget class="QWidget" name="">
+        <widget class="QWidget" name="layoutWidget">
          <property name="geometry">
           <rect>
            <x>2</x>
            <y>2</y>
            <width>781</width>
-           <height>27</height>
+           <height>34</height>
           </rect>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0">
@@ -150,7 +150,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>22</height>
+     <height>30</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -176,6 +176,8 @@
     <addaction name="action_Copy"/>
     <addaction name="actionSelect_All"/>
     <addaction name="actionClear_selection"/>
+    <addaction name="actionExpand_all"/>
+    <addaction name="actionCollapse_all"/>
     <addaction name="separator"/>
     <addaction name="action_Find_tag"/>
     <addaction name="separator"/>
@@ -303,7 +305,7 @@
   </action>
   <action name="actionSelect_All">
    <property name="text">
-    <string>Select &amp;All</string>
+    <string>Select &amp;all</string>
    </property>
    <property name="toolTip">
     <string>Select all tags</string>
@@ -335,6 +337,22 @@
    </property>
    <property name="text">
     <string>Show &amp;Filter bar</string>
+   </property>
+  </action>
+  <action name="actionExpand_all">
+   <property name="text">
+    <string>E&amp;xpand all</string>
+   </property>
+   <property name="toolTip">
+    <string>Expand all levels</string>
+   </property>
+  </action>
+  <action name="actionCollapse_all">
+   <property name="text">
+    <string>C&amp;ollapse all</string>
+   </property>
+   <property name="toolTip">
+    <string>Collapse all levels</string>
    </property>
   </action>
  </widget>
