--- a/dicomtreeQT5.qrc
+++ b/dicomtreeQT5.qrc
@@ -1,9 +1,9 @@
 <RCC>
   <qresource prefix="icons">
+    <file>Icons/Farm-Fresh_tag_blue_delete.png</file>
+    <file>Icons/Farm-Fresh_tag_blue_edit.png</file>
+    <file>Icons/Farm-Fresh_tag_blue_add.png</file>
     <file>Icons/search.xpm</file>
-    <file>Icons/del.xpm</file>
-    <file>Icons/add.xpm</file>
-    <file>Icons/edit.xpm</file>
     <file>Icons/ImageSave.xpm</file>
     <file>Icons/ImageOpen.xpm</file>
     <file>Icons/exit.xpm</file>
